@@ -6,7 +6,7 @@ $config['menu_choices'] = array(
     'menudata' => array(
         array('name' => 'Home', 'link' => '/'),
         array('name' => 'Work', 'link' => '/Views'),
-        array('name' => 'Maintenance', 'link' => '/#'),
+        array('name' => 'Maintenance', 'link' => '/Mtce'),
         array('name' => 'Help Wanted', 'link' => '/Helpme'),
         )
     );
