@@ -1,0 +1,10 @@
+<h3>Tasks by Category</h3>
+
+<table class="table">
+<tr>
+        <th>Id</th>
+        <th>Task</th>
+        <th>Status</th>
+</tr>
+{display_tasks}
+</table>
